proconio/tests/ui/fastout/argument-never-used.stderr
error: argument never used
 --> $DIR/argument-never-used.rs:5:18
  |
5 |     println!("", 42);
  |              --  ^^ argument never used
  |              |
  |              formatting specifier missing
