proconio/tests/ui/fastout/argument-never-used.rs
use proconio::fastout;

#[fastout]
fn main() {
    println!("", 42);
}
